# window-alm-3

./: .gitignore  .gitmodules  README.md  build_alm.sh  fetch_ddlog.sh  magic_rectangles.alm  package.json  sorts.dot
flamingo/: .gitignore  README.md  package.json
flamingo/lib/: index.js
flamingo/native/: .gitignore  Cargo.toml  build_and_test.sh  dynamic.dl  logic.alm  logic.dl  logic1.dl  test.dl
flamingo/native/src/: lib.rs
flamingo/native/test_ddlog/: Cargo.toml  test.dot
flamingo/native/test_ddlog/src/: api.rs  build.rs  lib.rs  main.rs
flamingo/native/test_ddlog/types/: Cargo.toml  lib.rs
flamingo/native/test_ddlog/value/: lib.rs
flamingo/native/tests/: corner_snapping.dat.output  flow.dat.output  snap_left.dat.output  snap_right.dat.output  snap_top.dat.output  snapping.dat.output
src/: constructors.js  convert.js  index.css  index.html  index.js  logic.alm  logic.md  render.js  side_effects.js  ui.js
test/: group_motion.js  snapping.js  test.js
