[package]
name = "flamingo"
version = "0.1.0"
authors = ["Daniel Hines <d4hines@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "flamingo"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies.logic]
path = "./logic_ddlog"

[dependencies.value]
path = "./logic_ddlog/value"

[dependencies.types]
path = "./logic_ddlog/types"

[dependencies.differential_datalog]
path = "./logic_ddlog/differential_datalog"

[dependencies.neon-serde]
path = "../../neon-serde"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2"
neon = "0.4"
